# gseptica

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
data/: Makefile.am  Makefile.in  gseptica.1  gseptica.desktop.in  help.html
po/: LINGUAS  POTFILES.in  ro.po
src/: Makefile.am  Makefile.in  ai.cpp  ai.h  defines.h  game.cpp  game.h  gseptica.glade  main.cpp  mainwindow.cpp  mainwindow.h  resource.rc
